Main structure-Front end

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,11 +1,59 @@
 
-<%- include('partials/header.ejs') %>
-  
-<%- include('partials/navbar.ejs') %>
+
+<%-include('partials/header.ejs')%>
 
 
+<div class="container">
+    <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+        <div class="col-10 col-sm-8 col-lg-6">
+          <img src="./Assets/images/bbteam.jpg" class="d-block mx-lg-auto img-fluid myImg" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+        </div>
+  <div class="col-lg-6">
+    <!--h1-->      <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3 ">Hi, We are <span class="name">Group 4</span></h1>
 
+            <p class="lead mb-4">  This project has been developed to fulfill the course requirements of Advanced Database Systems, Section 402. Throughout this project, we have enhanced our PL/SQL skills, as well as our proficiency in both backend and frontend development. We have practiced CRUD operations using PL/ SQL to effectively connect the backend with the frontend. </p>
+           
+            <p class="lead mb-4"> The names of our Team members are as follows:</p>
+          <div class="d-grid gap-2 d-md-flex justify-content-md-start">
 
-  
-<%- include('partials/footer.ejs') %>
+            <table class="table">
+              <thead class="table-dark">
+                <th scope="col">#</th>
+                <th scope="col">Name</th>
+                <th scope="col">Student</th>
+             
+              </tr>
+              </thead>
 
+              <tbody>
+                <tr>
+                  <th scope="row">1</th>
+                  <td>Noveen Mirza</td>
+                  <td>3012*****</td>
+                 
+                </tr>
+                <tr>
+                  <th scope="row">2</th>
+                  <td>Noor-ul-Huda</td>
+                  <td>3012***</td>
+                </tr>
+                <tr>
+                  <th scope="row">3</th>
+                  <td>Areebah Nadeem</td>
+                  <td>301283959</td>
+                </tr>
+                <tr>
+                  <th scope="row">4</th>
+                  <td>Maan Patel/td>
+                  <td>3012***</td>
+                </tr>
+                
+              </tbody>
+            </table>
+
+          </div>
+        </div>
+        </div>
+        </div>
+
+        <%-include('partials/footer.ejs')%>
