--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,10 +1,31 @@
 
-<%- include('partials/header.ejs') %>
-  
-<%- include('partials/navbar.ejs') %>
 
+<%-include('partials/header.ejs')%>
+<br><br><br>
 
-<h1>Hello!</h1>
+<div class="px-4 py-5 my-5 text-center">
+    <img class="d-block mx-auto mb-4 roundImage" src="/Assets/images/brewlogo.png" alt="" >
+    <h1 class="display-5 fw-bold text-body-emphasis">Welcome to BrewBeans</h1>
+    <div class="col-lg-6 mx-auto">
+      
+      <p class="lead mb-4"> Your cozy corner for customized brews. Here, you can tailor your perfect cup, update your usual to match your mood, choose from our curated menu, or even say goodbye to an old favorite. Your coffee, your way—every day. Join us again for your personalized coffee experience!.</p>
+      <p class="lead mb-4">Just select an option below to proceed.</p>
+      <!-- <div class="d-grid gap-2 d-sm-flex justify-content-sm-center"> -->
+        <div class="d-grid gap-2 col-6 mx-auto">
+        
+        <button type="button" class="btn btn-warning btn-lg px-4 me-md-2"><a href="/about" class="noContactUsDecore"> Create Product </a></button>
+        <button type="button" class="btn btn-warning btn-lg px-4 me-md-2"><a href="/about" class="noContactUsDecore"> Show Product List</a></button>
+        <button type="button" class="btn btn-warning btn-lg px-4 me-md-2"><a href="/about" class="noContactUsDecore"> Update Product</a></button>
+        <button type="button" class="btn btn-warning btn-lg px-4 me-md-2"><a href="/updatedescription2" class="noContactUsDecore"> Update Product Description</a></button>
+        <button type="button" class="btn btn-warning btn-lg px-4 me-md-2"><a href="/about" class="noContactUsDecore"> Show Product State Tax</a></button>
+        <button type="button" class="btn btn-warning btn-lg px-4 me-md-2"><a href="/about" class="noContactUsDecore"> Update Order Status</a></button>
+        <button type="button" class="btn btn-warning btn-lg px-4 me-md-2"><a href="/about" class="noContactUsDecore"> Product Promotion</a></button>
+        
 
-  
-<%- include('partials/footer.ejs') %>
+        </div>
+
+    </div>
+  </div>
+
+<%-include('partials/footer.ejs')%>
+
