--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,1 @@
-
-<%- include('partials/header.ejs') %>
-  
-<%- include('partials/navbar.ejs') %>
-  
-<%- include('partials/footer.ejs') %>
+<%-include('home.ejs')%>
