--- a/views/updatedescription2.ejs
+++ b/views/updatedescription2.ejs
@@ -15,7 +15,7 @@
             
                   </div>
                 <div class="col-12  ">
-                    <label for="" class="form-label ">Description</label>
+                    <label for="" class="form-label ">New Description</label>
                     <input type="text" class=" h-100 d-inline-block form-control" id="message" placeholder="Enter updated description here" >
               
                   </div>
