fixed the logo size and added/updated the about us section

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -44,8 +44,8 @@
                 </tr>
                 <tr>
                   <th scope="row">4</th>
-                  <td>Maan Patel/td>
-                  <td>3012***</td>
+                  <td>Maan Patel</td>
+                  <td>301290719</td>
                 </tr>
                 
               </tbody>
@@ -55,5 +55,63 @@
         </div>
         </div>
         </div>
+
+        <div class="container">
+          <div class="row text-center justify-content-center">
+            <div class="col-md-6 col-lg-3 mb-5">
+              <div class="bg-white rounded shadow-sm py-5 px-4">
+                <img
+                  src="/Assets/images/Noor.png"
+                  alt="Image of Noor"
+                  width="100"
+                  class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm"
+                />
+                <h5 class="mb-0">Noor</h5> 
+                <span class="small text-uppercase text-muted">College Student in Software Engineering</span>
+              </div>
+            </div>
+
+            <div class="col-md-6 col-lg-3 mb-5">
+              <div class="bg-white rounded shadow-sm py-5 px-4">
+                <img
+                  src="/Assets/images/areebah.png"
+                  alt="Image of Areebah"
+                  width="100"
+                  class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm"
+                />
+                <h5 class="mb-0">Areebah</h5>
+                <span class="small text-uppercase text-muted">College Student in Software Engineering</span>
+              </div>
+            </div>
+
+            <div class="col-md-6 col-lg-3 mb-5">
+              <div class="bg-white rounded shadow-sm py-5 px-4">
+                <img
+                   src="https://media.discordapp.net/attachments/1128041738951479356/1129955294672334939/IMG_6532.jpg?width=679&height=650"
+                  alt="Image of Maan"
+                  width="100"
+                  class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm"
+                />
+                <h5 class="mb-0">Maan</h5>
+                <span class="small text-uppercase text-muted">College Student in Software Engineering</span>
+              </div>
+            </div>
+
+            <div class="col-md-6 col-lg-3 mb-5">
+              <div class="bg-white rounded shadow-sm py-5 px-4">
+                <img
+                  src="/Assets/images/noveen.png" 
+                  alt="Image of Noveen"
+                  width="100"
+                  class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm"
+                />
+                <h5 class="mb-0">Noveen</h5>
+                <span class="small text-uppercase text-muted">College Student in Software Engineering</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        </div>
+   
 
         <%-include('partials/footer.ejs')%>
