--- a/views/about.ejs
+++ b/views/about.ejs
@@ -29,13 +29,13 @@
                 <tr>
                   <th scope="row">1</th>
                   <td>Noveen Mirza</td>
-                  <td>3012*****</td>
+                  <td>301208653</td>
                  
                 </tr>
                 <tr>
                   <th scope="row">2</th>
-                  <td>Noor-ul-Huda</td>
-                  <td>3012***</td>
+                  <td>Noorulhuda Khamees</td>
+                  <td>301291589</td>
                 </tr>
                 <tr>
                   <th scope="row">3</th>
