added the routes

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -20,8 +20,8 @@
       <button type="button" class="btn btn-warning btn-lg px-4 me-md-2"><a href="/about" class="noContactUsDecore"> Show Product List</a></button>
       <button type="button" class="btn btn-warning btn-lg px-4 me-md-2"><a href="/about" class="noContactUsDecore"> Update Product</a></button>
       <button type="button" class="btn btn-warning btn-lg px-4 me-md-2"><a href="/updatedescription2" class="noContactUsDecore"> Update Product Description</a></button>
-      <button type="button" class="btn btn-warning btn-lg px-4 me-md-2"><a href="/about" class="noContactUsDecore"> Show Product State Tax</a></button>
-      <button type="button" class="btn btn-warning btn-lg px-4 me-md-2"><a href="/about" class="noContactUsDecore"> Update Order Status</a></button>
+      <button type="button" class="btn btn-warning btn-lg px-4 me-md-2"><a href="/showproductstatetax" class="noContactUsDecore"> Show Product State Tax</a></button>
+      <button type="button" class="btn btn-warning btn-lg px-4 me-md-2"><a href="/updateorderstatus" class="noContactUsDecore"> Update Order Status</a></button>
       <button type="button" class="btn btn-warning btn-lg px-4 me-md-2"><a href="/about" class="noContactUsDecore"> Product Promotion</a></button>
 
 
