--- a/views/showproductstatetax.ejs
+++ b/views/showproductstatetax.ejs
@@ -1,3 +1,38 @@
 <%-include('partials/header.ejs')%>
 
+<div class="album py-5 bg-body-tertiary">
+    <div class="container ">
+    
+    <div class="col-md-7 col-lg-8">
+      <h2 class="pb-2 border-bottom">Show Product State Tax</h2>
+      <form class="needs-validation" id="contact-form"   action="./home">
+        <div class="row g-3">
+
+            <div class="col-12">
+                <label for="id" class="form-label">Shopper's Sate: </span></label>
+                <input type="text" class="form-control" id="contact" placeholder="Enter Shopper's Sate here" >
+        
+              </div>
+            <div class="col-12  ">
+                <label for="" class="form-label ">Basket Subtotal</label>
+                <input type="number" class=" h-100 d-inline-block form-control" id="message" placeholder="Enter Basket Subtotal here" >
+          
+              </div>
+          
+      
+
+             </div>
+             
+          
+              <hr class="my-4">
+
+              <p>Tax Amount: </p>
+          
+              <button class="w-100 btn btn-warning btn-lg" type="submit" value="Submit" onclick="alert('Submitted Successfully')" >Submit</button>
+            </form>
+          </div>
+          </div>
+          </div>
+
+
 <%-include('partials/footer.ejs')%>
