added the frontend for calculating tax page

--- a/views/updateorderstatus.ejs
+++ b/views/updateorderstatus.ejs
@@ -3,7 +3,7 @@
 Update order status page -->
 
 <!-- 
-STILL NEED TO EDIT IT -->
+STILL NEED TO EDIT IT! -->
 
 <!-- <div class="album py-5 bg-body-tertiary">
     <div class="container ">
