--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,7 +16,8 @@
     <!-- Main buttons -->
     <div class="d-grid gap-2 col-6 mx-auto">
 
-      <button type="button" class="btn btn-warning btn-lg px-4 me-md-2"><a href="/about" class="noContactUsDecore"> Create Product </a></button>
+     <!-- Update the Create Product button  -->
+      <button type="button" class="btn btn-warning btn-lg px-4 me-md-2"><a href="/create-product" class="noContactUsDecore">Create Product</a></button>
       <button type="button" class="btn btn-warning btn-lg px-4 me-md-2"><a href="/about" class="noContactUsDecore"> Show Product List</a></button>
       <button type="button" class="btn btn-warning btn-lg px-4 me-md-2"><a href="/about" class="noContactUsDecore"> Update Product</a></button>
       <button type="button" class="btn btn-warning btn-lg px-4 me-md-2"><a href="/updatedescription2" class="noContactUsDecore"> Update Product Description</a></button>
